--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to GitHub Container Registry
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ./Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: ${{ github.ref == 'refs/heads/master' }}
           tags: ghcr.io/cthit/chalmers-ldap-gamma-sync:latest
 
   lint:
